# kozmikaDil-migrated-20260304-102440

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  codex_spark_playbook.txt  k
.github/: actionlint.yaml
.github/scripts/: architecture_guard.py  microcontroller_readiness_gate.py  platform_readiness_gate.py  platform_support_gate.py  precision_policy_guard.py
.github/workflows/: ci.yml  cpu22-github-matrix.yml  dependency-review.yml  gpu-backend-cicd.yml  gpu-backend-smoke.yml  gpu7-github-matrix.yml  platform-support-github-gpu-probe.yml  security-codeql.yml  stability-nightly.yml  workflow-lint.yml
bench/: report_phase10.md  results
bench/results/: README.md  crosslang_generic_ops_fastinit_list200000_mat256_r1.csv  crosslang_generic_ops_fastinit_list200000_mat256_r1.json  crosslang_generic_ops_fastinit_list200000_mat256_r3.csv  crosslang_generic_ops_fastinit_list200000_mat256_r3.json  crosslang_generic_ops_fastinit_list200000_mat256_r5.csv  crosslang_generic_ops_fastinit_list200000_mat256_r5.json  crosslang_generic_ops_list200000_mat256_r5.csv  crosslang_generic_ops_list200000_mat256_r5.json  crosslang_matmul4_kernel_only_1000x1000_r1.csv  crosslang_matmul4_kernel_only_1000x1000_r1.json  crosslang_matmul4_kernel_only_1000x1000_r20.csv  crosslang_matmul4_kernel_only_1000x1000_r20.json  crosslang_matmul4_kernel_only_1000x1000_r5.csv  crosslang_matmul4_kernel_only_1000x1000_r5.json  crosslang_matmul4_runtime_1000x1000_r1.csv  crosslang_matmul4_runtime_1000x1000_r1.json  crosslang_matmul4_runtime_1000x1000_r20.csv  crosslang_matmul4_runtime_1000x1000_r20.json  crosslang_matmul4_runtime_128x128_r1.csv  crosslang_matmul4_runtime_128x128_r1.json  crosslang_matmul4_runtime_256x256_r5.csv  crosslang_matmul4_runtime_256x256_r5.json  crosslang_matmul_kernel_only_1000x1000_r1.csv  crosslang_matmul_kernel_only_1000x1000_r1.json  crosslang_matmul_kernel_only_1000x1000_r5.csv  crosslang_matmul_kernel_only_1000x1000_r5.json  crosslang_matmul_kernel_only_64x64_r5.csv  crosslang_matmul_kernel_only_64x64_r5.json  crosslang_matmul_runtime_1000x1000_r1.csv  crosslang_matmul_runtime_1000x1000_r1.json  crosslang_matmul_runtime_100x100_r100.csv  crosslang_matmul_runtime_100x100_r100.json  crosslang_matmul_runtime_64x64_r5.csv  crosslang_matmul_runtime_64x64_r5.json  generic_speedup_nm128_nl120000_nmm256_r3_w1.csv  generic_speedup_nm128_nl120000_nmm256_r3_w1.json  generic_speedup_nm128_nl200000_nmm128_r3_w1.csv  generic_speedup_nm128_nl200000_nmm128_r3_w1.json  generic_speedup_nm256_nl120000_nmm256_r3_w1.csv  (+42 more)
bench/scripts/: run_async_runtime_benchmarks.py  run_async_runtime_benchmarks.sh  run_bootstrap_baselines.sh  run_containers_primitives_benchmarks.sh  run_crosslang_generic_ops_fastinit.sh  run_crosslang_matmul4_runtime.py  run_crosslang_matmul4_runtime.sh  run_crosslang_matmul_runtime.py  run_crosslang_matmul_runtime.sh  run_full_performance_audit.sh  run_hetero_runtime_benchmarks.py  run_hetero_runtime_benchmarks.sh  run_matmul_schedule_gpu_benchmarks.py  run_matmul_schedule_gpu_benchmarks.sh  run_phase10_benchmarks.py  run_phase8_benchmarks.py  run_platform_support_benchmarks.py  run_platform_support_benchmarks.sh  run_scalar_runtime_benchmarks.py  run_scalar_runtime_benchmarks.sh  (+3 more)
compiler/: CMakeLists.txt
compiler/include/: spark
compiler/include/spark/: ast.h  codegen.h  evaluator.h  parser.h  semantic.h
compiler/src/: application  port
compiler/src/common/: ast.cpp  cpu_features.cpp
compiler/src/phase1/: sparkc_main.cpp
compiler/src/phase1/sparkc_main_parts/: 01_common.cpp  02_pipeline.cpp  03_execute.cpp  04_main.cpp
compiler/src/phase2/: lexer.cpp
compiler/src/phase2/parser_parts/: 00b_parser_state_utils.cpp  02a_parser_statement_dispatch.cpp  02b_parser_control_statements.cpp  02c_parser_definition_statements.cpp  03_parser_expressions.cpp  04a_parser_expression_unary_primary.cpp
compiler/src/phase3/: evaluator.cpp
compiler/src/phase3/evaluator_parts/: eval_dispatch.cpp  internal_helpers.h
compiler/src/phase3/evaluator_parts/expr/: expr_attribute.cpp  expr_binary.cpp  expr_call.cpp  expr_variable.cpp
compiler/src/phase3/evaluator_parts/helpers/: 00_numeric_helpers.cpp
compiler/src/phase3/evaluator_parts/stmt/: stmt_assign.cpp  stmt_for.cpp  stmt_function.cpp  stmt_if.cpp  stmt_while.cpp
compiler/src/phase3/semantic_parts/: 01_core.cpp  02_types_and_names.cpp  03_context_tier.cpp  04_analysis.cpp  05_expr_infer.cpp  06_dumps.cpp
compiler/src/phase4/: codegen.cpp
compiler/src/phase4/codegen_parts/: 01_helpers.cpp  02_ir_kind.cpp  03_ir_to_c.cpp  04_codegen_front.cpp  05_codegen_flow.cpp  06_codegen_expr.cpp
compiler/src/phase5/runtime/: environment.cpp  index_eval.cpp  interpreter_core.cpp  interpreter_ops.cpp  value_constructors.cpp  value_repr.cpp
compiler/src/phase5/runtime/ops/: README.md  ops_common_numeric.cpp  ops_list_arithmetic.cpp  ops_matrix_arithmetic.cpp  runtime_ops.h
compiler/src/phase5/runtime/primitives/: 01_numeric_scalar_core.cpp  02_numeric_builtin_registry.cpp
compiler/src/phase5/runtime/primitives/numeric_scalar_core_parts/: 01_mpfr_and_cast.cpp  02_compare_and_normalize.cpp  03_compute_core.cpp  04_inplace_and_cache.cpp  05_numeric_kind_and_repeat.cpp  06_bench_and_tail.cpp
compiler/src/phase6/runtime/: 01_hetero_plan_common.cpp  02_hetero_list_ops.cpp  03_hetero_matrix_ops.cpp
compiler/src/phase7/runtime/: 03_pipeline_exec_list.cpp  04_pipeline_exec_matrix.cpp
compiler/src/phase8/runtime/: 01_schedule.cpp  02_pack_cache.cpp  03_matmul_kernel.cpp  04_matmul_entry.cpp
compiler/src/phase9/runtime/: 02_task_runtime.cpp
doc/: decisions.md  language_spec.md  platform_support_matrix.md  platform_support_policy.json  research_notes.md
docs/: ci_cd_run_log.txt  decisions.md  grammar.md  language_spec.md  memory_model.md  research_notes.md
record/: current_status.md  file_structure.md
scripts/: autofdo_cycle.sh  bolt_opt.sh  bootstrap_bootstrap.sh  pgo_cycle.sh  platform_support_multiarch.sh  platform_support_platform_matrix.sh  platform_support_safety_gates.sh  release_package.sh  ubuntu_toolchain.sh
(+1395 files in other folders)
